kubernetes/portainer/templates/ingress-route.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portainer-frontend
  namespace: portainer
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`portainer.yourdomanin.com`)
      kind: Rule
      services:
        - name: portainer
          port: 9000
